--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 oauthlib==3.2.2
+pillow==10.3.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
