--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ crispy-bootstrap5==0.7
 cryptography==42.0.3
 defusedxml==0.7.1
 dj-database-url==0.5.0
-Django==3.2.25
+Django
 django-allauth==0.41.0
 django-crispy-forms==2.1
 django-summernote==0.8.20.0
