--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,8 @@ requests-oauthlib==1.3.1
 rsa==4.9
 six==1.16.0
 sqlparse==0.4.4
+stripe==9.9.0
+typing_extensions==4.12.1
 urllib3==1.26.16
 webencodings==0.5.1
 Werkzeug==2.2.3
