--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.7.2
 bleach==6.1.0
+boto3==1.34.121
+botocore==1.34.121
 cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.16.0
@@ -12,6 +14,7 @@ dj-database-url==0.5.0
 Django==3.2.25
 django-allauth==0.41.0
 django-crispy-forms==1.14.0
+django-storages==1.14.3
 django-summernote==0.8.20.0
 Flask==2.2.3
 google-auth==2.22.0
@@ -21,6 +24,7 @@ gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.2
 oauthlib==3.2.2
 pillow==10.3.0
@@ -29,11 +33,13 @@ pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
 pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+s3transfer==0.10.1
 six==1.16.0
 sqlparse==0.4.4
 stripe==9.9.0
